--- a/app/src/main/res/layout/item_list_blog.xml
+++ b/app/src/main/res/layout/item_list_blog.xml
@@ -5,61 +5,62 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:background="@color/colorGray"
-        android:paddingTop="15dp"
-        android:paddingLeft="15dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@color/colorGray"
+        android:paddingLeft="15dp"
+        android:paddingTop="15dp">
 
         <ImageView
-            android:src="@drawable/blog_32"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:src="@drawable/blog_32" />
 
         <TextView
-            android:background="@color/colorGray"
-            android:paddingLeft="10dp"
             android:id="@+id/tv_blog_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorGray"
+            android:paddingLeft="10dp"
             android:text="blog 1"
             android:textColor="@color/colorPrimary"
             android:textSize="30sp" />
     </LinearLayout>
 
     <ImageView
-        android:background="@color/colorGray"
         android:id="@+id/iv_blog_image"
         android:layout_width="match_parent"
         android:layout_height="144dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:background="@color/colorGray" />
 
     <TextView
-        android:background="@color/colorGray"
-        android:gravity="center_vertical"
-        android:drawableLeft="@drawable/idea"
         android:id="@+id/tv_blog_intro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:background="@color/colorGray"
+        android:drawableLeft="@drawable/idea"
+        android:gravity="center_vertical"
         android:text="annkdiomkmkg"
         android:textColor="@color/colorOre"
         android:textSize="19sp" />
 
     <TextView
-        android:layout_marginLeft="15dp"
-        android:background="@drawable/et_layou"
-        android:paddingLeft="15dp"
-        android:gravity="center_vertical"
         android:id="@+id/tv_read_blog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:textColor="@color/colorWhite"
-        android:text="Reading "
+        android:background="@drawable/et_layou"
         android:drawableRight="@drawable/next_2"
-
-        android:textSize="20sp" />
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:text="Reading "
+        android:textColor="@color/colorWhite"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
